SyntacticAnalyzer/tests/fail/variables.java
class foo {

	static int method()
	var v1, v2;
	{
	
	}

}
